milestoneGateway/virtualServices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: manager-route
spec:
  hosts:
    - "*-manager-service.vps.svc.cluster.local"
  gateways:
    - vps-gateway
  http:
    - match:
      - port: 8080
      route:
        - destination:
            host: "*-manager-service.vps.svc.cluster.local"
            port:
              number: 8080
    - match:
      - port: 8990
      route:
        - destination:
            host: "*-manager-service.vps.svc.cluster.local"
            port:
              number: 8990
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxy-route
spec:
  hosts:
    - "*:32320"
    - "*-proxy-service.vps.svc.cluster.local"
  gateways:
    - vps-gateway
  http:
    - match:
      - uri:
          prefix: /
      websocketUpgrade: true
      route:
        - destination:
            host: "*-proxy-service.vps.svc.cluster.local"
            port:
              number: 8989
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitor-route
spec:
  hosts:
    - "*:31122"
    - "*-monitor-service.vps.svc.cluster.local"
  gateways:
    - vps-gateway
  http:
    - match:
        - port: 8080
      websocketUpgrade: true
      route:
      - destination:
          host: "*-monitor-service.vps.svc.cluster.local"
          port:
            number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-route
spec:
  hosts:
    - "*:30322"
    - "*-node-service.vps.svc.cluster.local"
  gateways:
    - vps-gateway
  http:
    - match:
        - port: 8989
      websocketUpgrade: true
      route:
        - destination:
            host: "*-node-service.vps.svc.cluster.local"
            port:
              number: 8989
    - match:
        - port: 8080
      route:
        - destination:
            host: "*-node-service.vps.svc.cluster.local"
            port:
              number: 8080
